# hexapod_text

hexapod_test/robot/: CMakeLists.txt  package.xml
hexapod_test/robot/include/robot/: elspider3.h  elspider_mini.h  robot_param.h  robot_state.h  unitree_a1.h
hexapod_test/robot/launch/: gazebo_launch.py  gazebo_sim_launch.py  rviz_launch.py
hexapod_test/robot/msg/: BodyState.msg  FootCmd.msg  FootState.msg  HlcState.msg  InitCmd.msg  JointCmd.msg  PlanCmd.msg  PlanFdb.msg
hexapod_test/robot/urdf/: test.urdf
hexapod_test/robot/urdf/elspider3/meshes/: LB_FOOT.STL  LB_HIP.STL  LB_SHANK.STL  LB_THIGH.STL  LF_HIP.STL  LF_THIGH.STL  LM_FOOT.STL  LM_HIP.STL  LM_SHANK.STL  LM_THIGH.STL  RB_HIP.STL  RB_SHANK.STL  RB_THIGH.STL  RF_FOOT.STL  RF_HIP.STL  RM_FOOT.STL  RM_HIP.STL  RM_SHANK.STL  RM_THIGH.STL
hexapod_test/robot/urdf/elspider3/urdf/: sw2urdf.urdf  xacro2urdf.urdf
hexapod_test/robot/urdf/elspider3/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  trunk.xacro
hexapod_test/robot/urdf/elspider_mini/meshes/: LB_FOOT.STL  LB_HIP.STL  LB_SHANK.STL  LB_THIGH.STL  LF_FOOT.STL  LF_HIP.STL  LF_SHANK.STL  LF_THIGH.STL  LM_FOOT.STL  LM_HIP.STL  LM_SHANK.STL  LM_THIGH.STL  RB_FOOT.STL  RB_HIP.STL  RB_SHANK.STL  RB_THIGH.STL  RF_HIP.STL  RF_SHANK.STL  RF_THIGH.STL  RM_HIP.STL  RM_SHANK.STL  RM_THIGH.STL
hexapod_test/robot/urdf/elspider_mini/urdf/: single_leg.urdf  sw2urdf.urdf  urdf2sdf.sdf  xacro2urdf.urdf
hexapod_test/robot/urdf/elspider_mini/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  trunk.xacro
hexapod_test/robot/urdf/elspider_mini/xml/: single_leg.xml
hexapod_test/robot/urdf/unitree_a1/xml/: a1.xml
hexapod_test/robot/world/: CPIPC2023.world  beam.world  box.world  earth.world  high_box.world  space.world  stairs.world  stairs_new.world  stairs_single.world
