<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot</name>
    <version>0.0.0</version>
    <description>The robot package</description>

    <maintainer email="qrpucp@qq.com">Haoyu Wang</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <!-- <depend>roscpp</depend> -->
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <!-- <depend>message_generation</depend> -->
    <!-- <depend>message_runtime</depend> -->
    <build_depend>launch_ros</build_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>rviz</exec_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
